# IRC20

./: .gitignore  Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/irc20/: Cargo.toml
src/template/: Cargo.toml
src/template/src/: lib.did  lib.rs
src/template_assets/src/: index.html  index.js
