[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
reqwest = "0.11.4"
serde = "1.0.111"
hyper = "0.10.15"
serde_json = "1.0.68"
chain_cloud_util = { git = "https://github.com/icpfoundation/chain_cloud_util.git" }
candid = "0.7.6"
[lib]
crate-type = ["cdylib"]
